# edrom_2021

./: .gitignore  README.md
src/movement/humanoid_control/: CMakeLists.txt  package.xml
src/movement/humanoid_control/config/: controlParams.yaml
src/movement/humanoid_control/include/humanoid_control/: HumanoidCtrlNode.h
src/movement/humanoid_control/launch/: humanoidcontrol.launch
src/movement/humanoid_control/src/: HumanoidCtrlNode.cpp  humanoid_ctrl_node.cpp
src/movement/humanoid_gazebo/sakura_gazebo/: CMakeLists.txt  package.xml
src/movement/humanoid_gazebo/sakura_gazebo/launch/: gazebo_control.launch  gazebo_control_backlash.launch  sakura_fixed.launch
src/movement/humanoid_gazebo/sakura_gazebo/worlds/: FLOORS.world  FLOORS2.world  sakura.world  sakura2.world  sakura3.world
src/movement/humanoid_interface/: CMakeLists.txt  package.xml
src/movement/humanoid_interface/include/humanoid_interface/: HumanoidInterface.h
src/movement/humanoid_interface/launch/: humanoid_interface.launch  humanoid_interface_gazebo.launch
src/movement/humanoid_interface/scripts/: setserial.bash
src/movement/humanoid_interface/src/: HumanoidInterface.cpp  humanoid_interface_node.cpp
src/movement/humanoid_loadmap/: CMakeLists.txt  package.xml
src/movement/humanoid_loadmap/config/: enum_config.xml  ik_config.xml  natasha_config.xml  natasha_config_murilaudio.xml  sa.sql  sakura_config.xml  stek_config.xml  urdf_config.urdf
src/movement/humanoid_loadmap/include/humanoid_loadmap/: LoadMapNode.h  Loader.h  Mapping.h
src/movement/humanoid_loadmap/launch/: natasha_loadmap.launch  sakura_loadmap.launch  stek_loadmap.launch
src/movement/humanoid_loadmap/src/: LoadMapNode.cpp  Loader.cpp  Mapping.cpp  loadmap_node.cpp
src/movement/humanoid_model/: CMakeLists.txt  package.xml
src/movement/humanoid_model/config/: robotParams.yaml  robotParams_Natasha.yaml
src/movement/humanoid_model/include/humanoid_model/: HumanoidModel.h  HumanoidModelNode.h  InvKin.h  RobotModel.h
src/movement/humanoid_model/launch/: humanoidmodel.launch  humanoidmodel_gazebo.launch
src/movement/humanoid_model/src/: HumanoidModel.cpp  HumanoidModelNode.cpp  InvKin.cpp  RobotModel.cpp  humanoidmodel_node.cpp
src/movement/humanoid_qt/movecreator_qt/: CMakeLists.txt  mainpage.dox  package.xml
src/movement/humanoid_qt/movecreator_qt/launch/: movecreator_gazebo.launch  natasha_movecreator.launch  sakura_movecreator.launch  stek_movecreator.launch
src/movement/humanoid_qt/movecreator_qt/resources/: images.qrc
src/movement/humanoid_qt/movecreator_qt/src/: main.cpp  movecreator.cpp  poseinterface.cpp  qnode.cpp
src/movement/humanoid_qt/movecreator_qt/ui/: movecreator.ui  poseinterface.ui
src/movement/humanoid_qt/robot_qt/: CMakeLists.txt  package.xml
src/movement/humanoid_qt/robot_qt/src/: main.cpp  main_window.cpp  qcustomplot.cpp  qnode.cpp
src/movement/humanoid_qt/robot_qt/ui/: main_window.ui
src/movement/humanoid_walking/: CMakeLists.txt  package.xml
src/movement/humanoid_walking/config/: walkingParams.yaml
src/movement/humanoid_walking/include/humanoid_walking/: LipWalk.h  LipWalkNode.h
src/movement/humanoid_walking/launch/: natasha_walking.launch  sakura_walking.launch  sakura_walking_full.launch  stek_walking.launch  walking_gazebo.launch
src/movement/humanoid_walking/src/: LipWalk.cpp  LipWalkNode.cpp  lipwalk_node.cpp
src/movement/ik_walk/: CMakeLists.txt  package.xml
src/movement/ik_walk/include/: andar.h
src/movement/ik_walk/include/ik_walk_lib/: manifest.xml
src/movement/ik_walk/src/: andar.cpp
src/movement/motor_comm/: CMakeLists.txt  README.md  package.xml
src/movement/motor_comm/include/opencm/: opencm.h
src/movement/motor_comm/launch/: opencm.launch  opencm_natasha.launch
src/movement/motor_comm/src/arduino/: Readme.md  arduino.ino  constants.h
src/movement/motor_comm/src/opencm/: conversion_webots.cpp  opencm.cpp  opencm_node.cpp  opencm_transitions.py
src/movement/motor_set_control/: CMakeLists.txt  package.xml  porao
src/movement/motor_set_control/pages/: back_stand_up.page  chuteGazebo4.page  front_stand_up.page  front_stand_up_sakura.page  getUpFromFront.page.page  levantar FODENDO CARALHUDO.page  levantarSTEKSTEIN.page  standUpFrontStek.page  standUpStek.page
src/movement/motor_set_control/src/: jointcommand.cpp  motorset.cpp  motorset_node.cpp  page.cpp  pose.cpp
src/movement/movement_msgs/: CMakeLists.txt  package.xml
src/movement/movement_msgs/cfg/: HumanoidCtrl.cfg  HumanoidInterface.cfg  HumanoidLearning.cfg  HumanoidLipWalkingCmd.cfg  HumanoidLipWalkingCtrl.cfg  HumanoidLipWalkingParams.cfg  HumanoidModelConfig.cfg  HumanoidModelMoveCreatorConfig.cfg
src/movement/movement_msgs/msg/: EndEffMsg.msg  EndEffStateMsg.msg  FFTMsg.msg  HeadMoveMsg.msg  HumanoidControlMsg.msg  HumanoidPropertiesMsg.msg  HumanoidStateMsg.msg  IDMapMsg.msg  ImpactMsg.msg  JointStateMsg.msg  LearningMsg.msg  LipFeedBack.msg  LipParamsMsg.msg  MotorDataMsg.msg  MotorDatasMsg.msg  MotorPIDMsg.msg  MotorRequestMsg.msg  MotorResponseMsg.msg  MotorStateMsg.msg  MovementMsg.msg  OpencmRequestMsg.msg  OpencmResponseMsg.msg  PerformanceMsg.msg  WalkingMsg.msg  WalkingParamsMsg.msg  WebotsMsg.msg
src/movement/movement_msgs/srv/: BehRequestSrv.srv  DynamixelCreatorSrv.srv  InterfaceSrv.srv  LipCmdSrv.srv  LipCtrlSrv.srv  LipParamsSrv.srv  LoadHumanoidPropertiesSrv.srv  LoadMapConfigsSrv.srv  MotorSetSrv.srv  MovementSrv.srv  MovementStatesSrv.srv  OpenCm.srv  PredefinedMovementSrv.srv  WalkCreatorRequestSrv.srv
src/movement/movement_util/: CMakeLists.txt  package.xml
src/movement/movement_util/src/: Enums.cpp  MathUtils.cpp  State.cpp  basicxml.cpp  spline.cpp
src/tools/gui_program/vision_libs/: Ball.cpp  Ball.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  ColorFilter.cpp  ColorFilter.hpp  ContourSearcher.cpp  ContourSearcher.hpp  Field.cpp  Field.hpp  Goal.cpp  Goal.hpp  LinesFilter.cpp  LinesFilter.hpp  Players.cpp  Players.hpp  RansacCircleSearcher.cpp  RansacCircleSearcher.hpp  Vision.cpp  Vision.hpp  VisionProcess.cpp  VisionProcess.hpp  testVision.cpp
(+11784 files in other folders)
