<package format="2">
  <name>humanoid_interface</name>
  <version>0.0.0</version>
  <description>
    This package implements a simple RobotHW for dynamixel motors.
  </description>
  <maintainer email="mateus.amarujo@gmail.com">Mateus Amarante</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>hardware_interface</depend>
  <depend>realtime_tools</depend>
  <depend>movement_msgs</depend>
  <depend>movement_util</depend>
  <depend>humanoid_loadmap</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>message_filters</depend>
  <depend>dynamixel_workbench_toolbox</depend>
  <depend>dynamixel_sdk</depend>
  <depend>dynamic_reconfigure</depend>
  
</package>
