<?xml version="1.0"?>
<package format="2">
  <name>humanoid_loadmap</name>
  <version>0.0.0</version>
  <description>The humanoid_loadmap package</description>
  <maintainer email="murilo@todo.todo">murilo</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>movement_util</depend>
  <depend>movement_msgs</depend>
  <depend>eigen_conversions</depend>
  <depend>roslib</depend>

</package>
