<?xml version="1.0"?>
<package format="2">
  <name>humanoid_model</name>
  <version>0.0.0</version>
  <description>The humanoid_model package</description>
  <maintainer email="murilo@todo.todo">murilo</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>movement_util</depend>
  <depend>humanoid_loadmap</depend>
  <depend>movement_msgs</depend>
  <depend>message_filters</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>eigen_conversions</depend>

</package>
