<package format="2">
  <name>motor_comm</name>
  <version>0.0.0</version>
  <description>
    Pacote que implementa os nodes para comunicação de motor
  </description>
  <maintainer email="lorenacosta.ufu@gmail.com">Lorena Costa</maintainer>
  <maintainer email="hericlesferraz@gmail.com">Hericles Ferraz</maintainer>
  
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>movement_msgs</depend>
  <depend>movement_util</depend>
  <depend>humanoid_loadmap</depend>
  <depend>dynamixel_workbench_toolbox</depend>
  <depend>dynamixel_sdk</depend>
</package>
