<?xml version="1.0"?>
<package format="2">
  <name>motor_set_control</name>
  <version>0.0.0</version>
  <description>The motor_set_control package</description>
  <maintainer email="lorenacosta.ufu@gmail.com">lorena</maintainer>
  <maintainer email="hericlesferraz@gmail.com">Hericles Ferraz</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>movement_util</depend>
  <depend>movement_msgs</depend>
  <depend>humanoid_interface</depend>
  <depend>message_filters</depend>
  <depend>humanoid_loadmap</depend>
  <depend>dynamic_reconfigure</depend>

  <export>
  </export>
</package>
