<?xml version="1.0"?>
<package format="2">
  <name>movement_msgs</name>
  <version>0.0.0</version>
  <description>
    Pacote declara as mensagens utilizadas no Movimento 
  </description>
  <license>BSD</license>
  <author email="edromufu@gmail.com">EDROM</author>
  <maintainer email="edromufu@gmail.com">EDROM</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_generation</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  
</package>
