<package>
  <name>sakura_gazebo</name>
  <version>0.1.0</version>
  <description>sakura_gazebo</description>
  <maintainer email="murilomend92@gmail.com">Murilo Mendonca</maintainer>
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>sakura_control</run_depend>
  <run_depend>sakura_description</run_depend>
  <run_depend>xacro</run_depend>

  <export>
  </export>
</package>
