<?xml version="1.0"?>
<package format="2">
  <name>movecreator_qt</name>
  <version>0.1.0</version>
  <description>
     movecreator_qt
  </description>
  <maintainer email="lorenacosta.ufu@gmail.com">Lorena Costa</maintainer>
  <maintainer email="hericlesferraz@gmail.com">Hericles Ferraz</maintainer>
  <author>Lorena Costa</author>
  <license>MIT</license>
	
  <buildtool_depend>catkin</buildtool_depend>
  <depend>qt_build</depend>
  <depend>roscpp</depend>
  <depend>libqt4-dev</depend>
  <depend>message_filters</depend>
  <depend>movement_msgs</depend>
  <depend>movement_util</depend>
  <depend>motor_set_control</depend>

</package>
