<?xml version="1.0"?>
<package format="2">
  <name>humanoid_qt</name>
  <version>0.1.0</version>
  <description>

     humanoid_qt

  </description>
  <maintainer email="Murilo@gmail.com">Murilo</maintainer>
  <author>Murilo</author>
  <license>BSD</license>
  <!-- <url type="bugtracker">https://github.com/stonier/qt_ros/issues</url> -->
  <!-- <url type="repository">https://github.com/stonier/qt_ros</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <depend>qt_build</depend>
  <depend>roscpp</depend>
  <depend>libqt4-dev</depend>
  <depend>sensor_msgs</depend>
  <depend>message_filters</depend>
  <depend>movement_msgs</depend>
  <depend>movement_util</depend>

</package>

